tests/conformance/errors/nested_call_stack/input.dgm
def c() {
  throw "err"
}

def b() {
  c()
}

def a() {
  b()
}

a()
